src/components/bs5/breadcrumbs/breadcrumbs.scss
// Breadcrumbs: https://getbootstrap.com/docs/5.3/components/breadcrumb/#sass-variables
@use "../../../css/mixins" as m;
// Define shared variables
$expander-icon-color: $qld-light-link;

// Breadcrumb component styles
.breadcrumb {
  // Shared CSS custom properties
  --#{$prefix}breadcrumb-divider: var(--qgds-icon-chevron-right);
  --#{$prefix}breadcrumb-expander: var(--qgds-icon-more-horizontal);
  --#{$prefix}breadcrumb-item-active-color: var(--#{$prefix}dark-grey-muted);
  --#{$prefix}breadcrumb-divider-color: var(--#{$prefix}light-action-secondary);
  --#{$prefix}breadcrumb-expander-color: var(
    --#{$prefix}light-action-secondary
  );
  --#{$prefix}breadcrumb-item-padding-x: 0;
  --#{$prefix}breadcrumb-bg: transparent;
  --#{$prefix}breadcrumb-margin-bottom: 0;
  --#{$prefix}breadcrumb-padding-y: 2rem;
  --#{$prefix}breadcrumb-link-color: var(--#{$prefix}light-link);
  --#{$prefix}breadcrumb-link-text-decoration-color: var(
    --#{$prefix}light-link
  );
  --#{$prefix}breadcrumb-link-text-decoration-color-hover: var(
    --#{$prefix}light-link
  );
  overflow: hidden;
  display: inline-flex;
  width: auto;
  max-width: 100%;
  white-space: nowrap;
  flex-wrap: nowrap;
  text-overflow: ellipsis;
  // Dark mode overrides
  .dark &,
  .dark-alt & {
    --#{$prefix}breadcrumb-item-active-color: var(
      --#{$prefix}color-default-color-dark-text-lighter
    );
    --#{$prefix}breadcrumb-divider-color: var(
      --#{$prefix}dark-action-secondary
    );
    --#{$prefix}breadcrumb-link-color: var(--#{$prefix}dark-link);
    --#{$prefix}breadcrumb-link-text-decoration-color: var(
      --#{$prefix}dark-link
    );
    --#{$prefix}breadcrumb-link-text-decoration-color-hover: var(
      --#{$prefix}dark-link
    );
    .breadcrumb-vertical > li > a {
      --#{$prefix}breadcrumb-link-color: var(--#{$prefix}light-link);
    }
  }

  .expanded {
    .breadcrumb-wrapper {
      max-height: 100%;
      --#{$prefix}dropdown-box-shadow:
        0px 1px 2px rgba(0, 0, 0, 0.3), 0px 2px 6px 2px rgba(0, 0, 0, 0.15); // level 2 shadow
      box-shadow: var(--#{$prefix}dropdown-box-shadow);
      pointer-events: all;
      transition: max-height 0.25s ease-in;
    }
  }

  .breadcrumb-vertical > li {
    list-style: none;
    width: 100%;
    &:after {
      display: none;
    }

    a {
      text-decoration: none;
      padding: 0.75rem 1rem;
      display: block;
      width: 100%;
      color: $qld-text-grey;
      white-space: nowrap; /* Prevents text from wrapping to the next line */
      overflow: hidden; /* Hides any content that overflows the element's box */
      text-overflow: ellipsis;
      &:hover {
        text-decoration: underline;
        color: $qld-light-link;
        text-decoration-thickness: var(
          --#{$prefix}link-underline-thickness-hover
        );
        background-color: $core-default-color-neutral-lighter;
      }
      @include m.focusable($offsetOutline: 3px);
      &:focus {
        outline-offset: -3px;
      }
    }
  }
  .breadcrumb-wrapper {
    position: absolute;
    margin-top: 2.5rem;
    max-height: 0;
    overflow: hidden;
    pointer-events: none;
    width: 360px;
    border-radius: 4px;
    /* Transition properties */
    transition: max-height 0.25s ease-out;
  }
  .breadcrumb-vertical {
    padding: 0;
    background-color: $core-default-color-neutral-lightest;
    border-bottom: 4px solid $qld-brand-secondary;
  }
}

// Breadcrumb items
.breadcrumb-item {
  font-size: 0.875rem;
  line-height: 1.25rem;
  display: none;

  // Override Bootstrap's default :before pseudo element
  &:before {
    display: none;
  }

  // Divider
  &:after {
    content: "";
    display: block;
    width: 1.5rem;
    mask-image: var(--#{$prefix}breadcrumb-divider);
    mask-size: 1rem 1rem;
    mask-repeat: no-repeat;
    mask-position: center center;
    background-color: var(--#{$prefix}breadcrumb-divider-color);
  }

  &:last-child:after {
    display: none;
  }

  // Breadcrumb link
  a,
  a:visited,
  a:hover {
    color: var(--#{$prefix}breadcrumb-link-color);
    text-decoration-color: var(
      --#{$prefix}breadcrumb-link-text-decoration-color
    );
  }

  a {
    @include m.focusable($offsetOutline: 3px);
  }
}

.breadcrumb-toggle {
  @include m.unset-button-styles();

  > button {
    display: inline-block;
    width: 32px;
    height: 32px;
    line-height: 1.5rem;
    outline: none;
    border: 0;
    background-color: transparent;
    border-radius: 4px;

    &:after {
      display: block;
      width: 100%;
      height: 100%;
      content: " ";
      mask-image: var(--#{$prefix}breadcrumb-expander);
      background-color: var(--#{$prefix}breadcrumb-link-color);
      mask-size: 1.5rem 1.5rem;
      mask-repeat: no-repeat;
      mask-position: center center;
    }

    &:hover,
    &:focus {
      background-color: rgba($core-default-color-neutral-black, 0.1);
    }

    @include m.focusable($offsetOutline: 3px);
  }
}

// Responsive styles
@include media-breakpoint-down(lg) {
  .breadcrumb {
    --#{$prefix}breadcrumb-padding-y: 1rem;
  }

  .breadcrumb-item {
    &:nth-last-child(2) {
      display: flex;
      flex-direction: row-reverse;

      // Rotate the back arrow 180 degrees, shift left to align chevron with text
      &:after {
        transform: rotate(180deg);
        transform-origin: center;
        margin-left: -0.25rem;
      }
    }
  }
}

//Large and above
@include media-breakpoint-up(lg) {
  .breadcrumb-item {
    display: flex;
    font-size: 1rem;
    line-height: 1.5rem;

    &.active {
      white-space: nowrap; /* Prevents text from wrapping to the next line */
      overflow: hidden; /* Hides any content that overflows the element's box */
      text-overflow: ellipsis;
      display: inline-block;
    }
  }
}

